--- a/css/hero.css
+++ b/css/hero.css
@@ -10,6 +10,10 @@
   margin: 0 0 36px;
 }
 
+.hero__slider {
+  min-height: 372px;
+}
+
 @media (max-width: 1024px) {
   .hero__title {
     font-size: 50px;
