--- a/css/navigation.css
+++ b/css/navigation.css
@@ -14,3 +14,21 @@
   line-height: 100%;
   text-transform: uppercase;
 }
+
+.navigation__link:hover {
+  color: #efe7be;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+@media (max-width: 560px) {
+  .navigation__list{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .navigation__link{
+    font-size: 12px;
+  }
+}
