--- a/css/radio.css
+++ b/css/radio.css
@@ -39,3 +39,15 @@
   background-position: 8px;
   background-repeat: no-repeat;
 }
+
+@media (max-width: 768px) {
+  .radio__label {
+    padding: 12px 16px;
+    font-size: 12px;
+  }
+
+  .radio__label_spec{
+    padding-left: 40px;
+    background-size: 24px;
+  }
+}
