--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ html {
 body {
   min-width: 320px;
   font-family: Raleway, sans-serif;
+  font-feature-settings: 'pnum' on, 'lnum' on;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
