--- a/css/about.css
+++ b/css/about.css
@@ -113,7 +113,7 @@
   }
 
   .about__list {
-    grid-template-columns: repeat(auto-fillt, minmax(272px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(272px, 1fr));
   }
 
   .about__title {
